test_yuriiq/catalog/language/english/account/voucher.php
<?php

// text
$_['text_account']	= 'Account';
$_['text_description']	= 'This gift certificate will be emailed to the recipient after your order has been paid for.';
$_['text_voucher']	= 'Gift Voucher';
$_['text_agree']	= 'I understand that gift certificates are non-refundable.';
$_['text_for']	= '%s Gift Certificate for %s';
$_['text_message']	= '<p>Thank you for purchasing a gift certificate! Once you have completed your order your gift voucher recipient will be sent an email with details how to redeem their gift voucher.</p>';

// error
$_['error_amount']	= 'Amount must be between %s and %s!';
$_['error_to_name']	= 'Recipient\';
$_['error_theme']	= 'You must select a theme!';
$_['error_email']	= 'E-Mail Address does not appear to be valid!';
$_['error_agree']	= 'Warning: You must agree that the gift certificates are non-refundable!';
$_['error_from_name']	= 'Your Name must be between 1 and 64 characters!';

// entry
$_['entry_from_email']	= 'Your Email:';
$_['entry_from_name']	= 'Your Name:';
$_['entry_to_email']	= 'Recipient\';
$_['entry_to_name']	= 'Recipient\';
$_['entry_amount']	= 'Amount:<br /><span class="help">(Value must be between %s and %s)</span>';
$_['entry_theme']	= 'Gift Certificate Theme:';
$_['entry_message']	= 'Message:<br /><span class="help">(Optional)</span>';

// heading
$_['heading_title']	= 'Purchase a Gift Certificate';
?>